# My_kg_cours

./: CMakeLists.txt  Cube.cpp  Cube.h  CubePropertiesDialog.cpp  CubePropertiesDialog.h  CubePropertiesDialog.ui  CurTypes.h  Cylinder.cpp  Cylinder.h  CylinderPropertiesDialog.cpp  CylinderPropertiesDialog.h  CylinderPropertiesDialog.ui  Figure.cpp  Figure.h  FigureSelectorDialog.cpp  FigureSelectorDialog.h  FigureSelectorDialog.ui  MainWindow.cpp  MainWindow.h  README.md  RenderArea.cpp  RenderArea.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Sphere.cpp  Sphere.h  SpherePropertiesDialog.cpp  SpherePropertiesDialog.h  SpherePropertiesDialog.ui  Tetrader.cpp  Tetrader.h  TetraderPropertiesDialog.cpp  TetraderPropertiesDialog.h  TetraderPropertiesDialog.ui  Trajectory.h  TrajectoryPropertiesDialog.cpp  TrajectoryPropertiesDialog.h  TrajectoryPropertiesDialog.ui  main.cpp  (+1 more)
